--- a/package.json
+++ b/package.json
@@ -3,9 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.7.1",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.2.1",
+    "bricks.js": "^1.8.0",
+    "image-downloader": "^3.4.2",
+    "js-file-download": "^0.4.4",
+    "rc-pagination": "^1.17.8",
+    "rc-tooltip": "^3.7.3",
     "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
+    "react-js-pagination": "^3.0.2",
+    "react-masonry-component": "^6.2.1",
+    "react-masonry-infinite": "^1.2.2",
+    "react-masonry-layout": "^0.4.0",
+    "react-modal-image": "^2.3.1",
+    "react-motion": "^0.5.2",
+    "react-paginate": "^6.0.0",
+    "react-responsive-modal": "^3.5.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.2",
+    "react-select": "^2.1.2",
+    "semantic-ui-react": "^0.84.0",
+    "simple-react-modal": "^0.5.1",
+    "unsplash-js": "^4.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
